Algunas correcciones, mas prolijo.

--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -618,28 +618,44 @@ We will now obtain an expression for the number of windows of a $C$ sequence whi
 
 \subsection{Alternative Proof of Theorem 1}
 
-Next, we provide an alternative proof of Theorem 1 based on Weyl's Criterion, stated in section \ref{section:weyls-criterion}, and a well-known proposition from the theory of systems of linear modular congruences.
+We provide an alternative proof of Theorem 1 based on Weyl's Criterion, as stated in section \ref{section:weyls-criterion}, and using a proposition from the theory of linear modular congruences and a well-known fact from the study of the roots of unity.
 
-Let $k$ be a positive integer and $\bar{l} = (l_1, l_2, \dots, l_k)$ a non-zero $k$-dimensional vector of integers, where both $k$ and $\bar{l}$ have arbitrary but fixed values.
+Let $k$ be a positive integer and $\bar{l} = (l_1, \dots, l_k)$ a non-zero $k$-dimensional vector of integers, where both $k$ and $\bar{l}$ have arbitrary but fixed values.
 
-Before providing the alternative proof of Theorem 1, we must first state the following lemma.
+Before applying Weyl's Criterion to sequence $L$, we must first prove the following lemma.
 
 \begin{lemma}\label{lemma:weyl-sum-over-cyclic-c-sequences}
-  Given an $n \in \mathbb{N}$, $n > min(|l_1|, |l_2|, \dots, |l_k|)$, let $W_k^c\left(C^{(n)}\right) = \bar{w}_1, \bar{w}_2, \dots, \bar{w}_{n^n}$ denote the windows sequence of order $k$ of $C^{(n)}$ viewed as a cyclic sequence. Then:
+  Given a number $n \in \mathbb{N}$ such that $n > max\left(k, min\left(|l_1|, \dots, |l_k|\right)\right)$, let
 
   \begin{equation*}
-    \sum_{j = 1}^{n^n} e^{2 \pi i \bar{l} \cdot \bar{w}_j} = 0 \text{.}
+    W_k^c\left(C^{(n)}\right) = \bar{w}_1, \bar{w}_2, \dots, \bar{w}_{n^n}
   \end{equation*}
+  
+  denote the windows sequence of order $k$ of $C^{(n)}$ viewed as a cyclic sequence. Then:
+
+  \begin{equation}\label{equation:weyl-sum-over-cyclic-c-sequence}
+    \sum_{j = 1}^{n^n} e^{2 \pi i \bar{l} \cdot \bar{w}_j} = 0 \text{.}
+  \end{equation}
 \end{lemma}
 
 \begin{proof}
-  Let $W_k^c\left(F^{(n, n)}\right) = \bar{f}_1, \bar{f}_2, \dots, \bar{f}_{n^n}$. From the definition of a $C$ sequence, it follows that $\bar{w}_j = \frac{1}{n} \bar{f}_j$ for $j = 1 \dots n^n$. Also, if we call $\Gamma = \left \{ 0, 1, \dots, n - 1 \right \} $, then by construction every $\bar{\gamma} \in \Gamma^k$ appears exactly once in the sequence $W_k^c\left(F^{(n, n)}\right)$. Substituting into the left-hand side of the equation above:
-  
+  If we let:
+
   \begin{equation*}
-    \sum_{j = 1}^{n^n} e^{2 \pi i \bar{l} \cdot (\frac{1}{n} \bar{f}_j)} = \sum_{j = 1}^{n^n} e^{\frac{2 \pi i}{n} \bar{l} \cdot \bar{f}_j} = \sum_{\bar{\gamma} \in \Gamma^k} e^{\frac{2 \pi i}{n} \bar{l} \cdot \bar{\gamma}}
+    W_k^c\left(F^{(n, n)}\right) = \bar{f}_1, \bar{f}_2, \dots, \bar{f}_{n^n}
   \end{equation*}
 
-  Now, since $\bar{l} \cdot \bar{\gamma} \in \mathbb{Z}$ and the function $exp : \mathbb{Z} \to \mathbb{C}$, $exp(m) = e^{\frac{2 \pi i}{n} m}$ is periodic with period equal to $n$, then:
+  then from the definition of a $C$ sequence, it follows that $\bar{w}_j = \frac{1}{n} \bar{f}_j$ for $j = 1 \dots n^n$.
+  
+  Now, if we call $\Gamma = \left \{ 0, 1, \dots, n - 1 \right \} $, then every $\bar{\gamma} \in \Gamma^k$ appears exactly $n^{n - k}$ times in the sequence $W_k^c\left(F^{(n, n)}\right)$. This is true because there are  $n^{n - k}$ ways of extending an $n$-ary sequence of length $k$ to one of length $n$ and, by construction, each of these appears exactly once in $F^{(n, n)}$ when viewed as a cycle.
+  
+  Substituting into the left-hand side of the equation \ref{equation:weyl-sum-over-cyclic-c-sequence}:
+  
+  \begin{equation*}
+    \sum_{j = 1}^{n^n} e^{2 \pi i \bar{l} \cdot (\frac{1}{n} \bar{f}_j)} = \sum_{j = 1}^{n^n} e^{\frac{2 \pi i}{n} \bar{l} \cdot \bar{f}_j} = n^{n - k} \sum_{\bar{\gamma} \in \Gamma^k} e^{\frac{2 \pi i}{n} \bar{l} \cdot \bar{\gamma}}
+  \end{equation*}
+
+  Since $\bar{l} \cdot \bar{\gamma} \in \mathbb{Z}$ and the function $exp : \mathbb{Z} \to \mathbb{C}$, $exp(m) = e^{\frac{2 \pi i}{n} m}$ is periodic with a period equal to $n$, then:
 
   \begin{equation*}
     \sum_{\bar{\gamma} \in \Gamma^k} e^{\frac{2 \pi i}{n} \bar{l} \cdot \bar{\gamma}}
@@ -654,7 +670,7 @@ Before providing the alternative proof of Theorem 1, we must first state the fol
 
   where the congruence $\bar{l} \cdot \bar{\gamma} \equiv r$ is taken modulo $n$.
 
-  It is a well-known fact from the theory of systems of linear modular congruences (see \cite{mccarthy-1986}, page 114), that the equation $\bar{l} \cdot \bar{\gamma} \equiv r \text{ (mod $n$)}$, where $\bar{\gamma} \in \Gamma^k$, only has solutions when $gcd(l_1, l_2, \dots, l_k, n) = g$ divides $r$. Moreover, in such case, the total number of solutions is equal to $g n^{k - 1}$. Therefore:
+  The conditions for the existence of solutions to equations of the form $\bar{l} \cdot \bar{\gamma} \equiv r \text{ (mod $n$)}$, $\bar{\gamma} \in \Gamma^k$, are well understood. See for example \cite{mccarthy-1986}, page 114. In particular, this equation only has solutions when $gcd(l_1, \dots, l_k, n) = g$ divides $r$ and, in such case, the total number of solutions is equal to $g n^{k - 1}$. Therefore:
 
   \begin{equation*}
     \begin{aligned}
@@ -675,7 +691,7 @@ Before providing the alternative proof of Theorem 1, we must first state the fol
     \end{aligned}
   \end{equation*}
 
-  where the last step comes from substituting $r = g r'$. If we also substitute $n = g n'$ and observe that $\left\lfloor \frac{n - 1}{g} \right\rfloor = n' - 1$, we arrive at:
+  where the last step comes from substituting $r = g r'$. If we also substitute $n = g n'$ and observe that $\left\lfloor \frac{n - 1}{g} \right\rfloor = n' - 1$, we can see that:
 
   \begin{equation*}
     \begin{aligned}
@@ -688,20 +704,20 @@ Before providing the alternative proof of Theorem 1, we must first state the fol
     \end{aligned}
   \end{equation*}
 
-  The term on the right-hand side is the sum of all roots of unity of order $n'$. It is a well-known fact that this sum is equal to $0$ whenever $n' > 1$. Finally, since $n > min(|l_1|, |l_2|, \dots, |l_k|) \ge g$, then $n' = n / g > 1$, and the proof is complete.
+  The term on the right-hand side is the sum of all the roots of unity of order $n'$. It is a well-known fact that this sum is equal to $0$ whenever $n' > 1$. Finally, since $n > min(|l_1|, \dots, |l_k|) \ge g$, then $n' = n / g > 1$, and the proof is complete.
 
 \end{proof}
 
 \begin{proof}[Proof of Theorem 1]
-  Similarly to subsection \ref{subsection:proof-of-theorem 1}, we consider a prefix of $L$ of length $N$, denoted $L_{1:N}$, and define the values $p$, $q$, and $r$ in the same way.
+  Similarly to section \ref{subsection:proof-of-theorem 1}, we consider a prefix of sequence $L$ of length $N$, denoted $L_{1:N}$, and we define the values $p$, $q$, and $r$ equivalently.
 
-  Letting $W_k(L) = \bar{w}_1, \bar{w}_2, \dots$, we define the complex value $\nu_N$ analogously as:
+  Letting $W_k(L) = \bar{w}_1, \bar{w}_2, \dots$, we define the complex value $\nu_N$ analogously as the Weyl sum over the first $N$ windows:
 
   \begin{equation*}
     \nu_N = \sum_{j = 1}^{N} e^{2 \pi i \bar{l} \cdot \bar{w}_j}
   \end{equation*}
 
-  Let $m = max\left(k, min\left(|l_1|, |l_1|, \dots, |l_k|\right)\right)$, and consider sufficiently large values of $N$ such that $m < r$. Again, this is always possible since $r$ is an unbounded, non-decreasing function of $N$. We can decompose $L_{1:N}$ into four consecutive sections; namely, sequences $S^{(1)}$, $S^{(2)}$, $S^{(3)}$ and $S^{(4)}$:
+  Let $m = max\left(k, min\left(|l_1|, \dots, |l_k|\right)\right)$, and consider sufficiently large values of $N$ such that $m < r$. Again, this is always possible since $r$ is an unbounded, non-decreasing function of $N$. We can decompose $L_{1:N}$ into four consecutive sections; namely, sequences $S^{(1)}$, $S^{(2)}$, $S^{(3)}$ and $S^{(4)}$:
 
   \begin{equation*}
     \begin{aligned}
@@ -713,16 +729,16 @@ Before providing the alternative proof of Theorem 1, we must first state the fol
     \end{aligned}
   \end{equation*}
 
-  and define $\nu_N^{(1)}$, $\nu_N^{(2)}$, $\nu_N^{(3)}$ and $\nu_N^{(4)}$ analogously such that:
+  and define $\nu_N^{(1)}$, $\nu_N^{(2)}$, $\nu_N^{(3)}$ and $\nu_N^{(4)}$ as the Weyl sums over windows entirely contained within each section, respectively, such that:
 
   \begin{equation*}
     \begin{aligned}
       \nu_N & = \nu^{(1)}_N + \nu^{(2)}_N + \nu^{(3)}_N + \nu^{(4)}_N + \varepsilon_b
     \end{aligned}
   \end{equation*}
-  for some complex number $\varepsilon_b$ where $|\varepsilon_b| \le 3 (k - 1)$.
+  for some complex number $\varepsilon_b$ with $|\varepsilon_b| \le 3 (k - 1)$, accounting for all windows crossing over any border.
 
-  Following the same reasoning as in subsection \ref{subsection:proof-of-theorem 1}, the values of $\nu_N^{(2)}$ and $\nu_N^{(3)}$ can be computed as the sums over the $C$ sequences composing $S^{(2)}$ and $S^{(3)}$ viewed as cycles, plus an error term accounting for the right edges. However, in this case, due to Lemma \ref{lemma:weyl-sum-over-cyclic-c-sequences} and the fact that all $C$ sequences in $S^{(2)}$ and $S^{(3)}$ have orders greater than $min\left(|l_1|, |l_1|, \dots, |l_k|\right)$, all these sums vanish to zero. Therefore, $\nu_N = \nu^{(1)}_N + \varepsilon_{\nu^{(2)}_N} + \varepsilon_{\nu^{(3)}_N} + \nu^{(4)}_N + \varepsilon_b$, for some complex values $\varepsilon_{\nu^{(2)}_N}, \varepsilon_{\nu^{(3)}_N}$ with absolute values less than or equal to $k - 1$.
+  Following the same reasoning as in section \ref{subsection:proof-of-theorem 1}, the values of $\nu_N^{(2)}$ and $\nu_N^{(3)}$ can be computed as the Weyl sums over the $C$ sequences composing $S^{(2)}$ and $S^{(3)}$ viewed as cycles, plus an error term accounting for right borders. However, in this case, due to Lemma \ref{lemma:weyl-sum-over-cyclic-c-sequences} and the fact that all $C$ sequences in $S^{(2)}$ and $S^{(3)}$ have orders greater than $m$, these sums vanish to zero. Therefore, $\nu_N = \nu^{(1)}_N + \varepsilon_{\nu^{(2)}_N} + \varepsilon_{\nu^{(3)}_N} + \nu^{(4)}_N + \varepsilon_b$, for some complex values $\varepsilon_{\nu^{(2)}_N}, \varepsilon_{\nu^{(3)}_N}$ with $|\varepsilon_{\nu^{(2)}_N}|, |\varepsilon_{\nu^{(3)}_N}| \le k - 1$.
 
   We will now consider the limit of $\nu_N / N$ as $N \to \infty$. Note that:
 
@@ -735,7 +751,7 @@ Before providing the alternative proof of Theorem 1, we must first state the fol
     \end{aligned}
   \end{equation*}
 
-  Since the numerator in the first term is dependent on $k$ and $m$ and bounded as a function of $N$ and, as shown before, $p / N$ approaches $0$ as $r \to \infty$, then the sum of both terms approaches $0$ as $N \to \infty$.
+  The numerator in the first term is dependent on $k$ and $m$ and constant as a function of $N$ and, as shown before, the second term approaches $0$ as $r \to \infty$. Therefore, the sum of both terms approaches $0$ as $N \to \infty$, which in turn implies that $\nu_N / N$ vanishes as well.
 
   Given that $k$ and $\bar{l}$ were chosen arbitrarily, Weyl's Criterion is satisfied for all values of $k$ and sequence $L$ is completely equidistributed.
 
