--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -618,7 +618,7 @@ We will now obtain an expression for the number of windows of a $C$ sequence whi
 
 \subsection{Alternative Proof of Theorem 1}
 
-We provide an alternative proof of Theorem 1 based on Weyl's Criterion, as stated in section \ref{section:weyls-criterion}, and using a proposition from the theory of linear modular congruences and a well-known fact from the study of the roots of unity.
+We provide an alternative proof of Theorem 1 based on Weyl's Criterion, as stated in section \ref{section:weyls-criterion}, using a proposition from the theory of linear modular congruences and a well-known fact from the study of the roots of unity.
 
 Let $k$ be a positive integer and $\bar{l} = (l_1, \dots, l_k)$ a non-zero $k$-dimensional vector of integers, where both $k$ and $\bar{l}$ have arbitrary but fixed values.
 
