--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -647,7 +647,7 @@ Before applying Weyl's Criterion to sequence $L$, we must first prove the follow
 
   then from the definition of a $C$ sequence, it follows that $\bar{w}_j = \frac{1}{n} \bar{f}_j$ for $j = 1 \dots n^n$.
   
-  Now, if we call $\Gamma = \left \{ 0, 1, \dots, n - 1 \right \} $, then every $\bar{\gamma} \in \Gamma^k$ appears exactly $n^{n - k}$ times in the sequence $W_k^c\left(F^{(n, n)}\right)$. This is true because there are  $n^{n - k}$ ways of extending an $n$-ary sequence of length $k$ to one of length $n$ and, by construction, each of these appears exactly once in $F^{(n, n)}$ when viewed as a cycle.
+  If we define $\Gamma = \left \{ 0, 1, \dots, n - 1 \right \} $, then every $\bar{\gamma} \in \Gamma^k$ appears exactly $n^{n - k}$ times in the sequence $W_k^c\left(F^{(n, n)}\right)$. This is true because there are  $n^{n - k}$ ways of extending an $n$-ary sequence of length $k$ to one of length $n$ and, by construction, each of these appears exactly once in $F^{(n, n)}$ when viewed as a cycle.
   
   Substituting into the left-hand side of the equation \ref{equation:weyl-sum-over-cyclic-c-sequence}:
   
