--- a/tex/caratula.tex
+++ b/tex/caratula.tex
@@ -17,18 +17,18 @@ Facultad de Ciencias Exactas y Naturales
 
 Departamento de Computaci\'on}
 
-\vspace{6.0cm}
+\vspace{3.0cm}
 
-%\vspace{3.0cm}
-%{
-%\Large \color{red}
-%\begin{tabular}{|p{2cm}cp{2cm}|}
-%\hline
-%& Pre-Final Version: \today &\\
-%\hline
-%\end{tabular}
-%}
-%\vspace{2.5cm}
+{
+\Large \color{red}
+\begin{tabular}{|p{2cm}cp{2cm}|}
+\hline
+& Versión preliminar: 8 de agosto, 2019 &\\
+\hline
+\end{tabular}
+}
+
+\vspace{2.0cm}
 
 \begin{huge}
 \textbf{\tituloTesis}
@@ -38,9 +38,12 @@ Departamento de Computaci\'on}
 
 {\large Tesis de Licenciatura en Ciencias de la Computaci\'on}
 
-\vspace{2cm}
+\vspace{1cm}
 
-{\Large \autor}
+{
+  \Large \autor \\
+  \small ealmansi@gmail.com, LU: 674/12
+}
 
 \end{center}
 
