--- a/tex/abs_esp.tex
+++ b/tex/abs_esp.tex
@@ -4,8 +4,8 @@
 %\vspace{1cm}
 \chapter*{\runtitulo}
 
-\noindent La princesa Leia, líder del movimiento rebelde que desea reinstaurar la República en la galaxia en los tiempos ominosos del Imperio, es capturada por las malévolas Fuerzas Imperiales, capitaneadas por el implacable Darth Vader. El intrépido Luke Skywalker, ayudado por Han Solo, capitán de la nave espacial ``El Halcón Milenario'', y los androides, R2D2 y C3PO, serán los encargados de luchar contra el enemigo y rescatar a la princesa para volver a instaurar la justicia en el seno de la Galaxia (aprox. 200 palabras).
+\noindent En este trabajo estudiamos una construcción publicada por Donald Knuth en 1965, que produce una secuencia de números reales completamente equidistribuidos. A nuestro entender, este es el primer ejemplo explícito presente en la literatura de una secuencia exhibiendo esta propiedad. La noción de equidistribución completa se utiliza en su sentido clásico; es decir que, dada una secuencia, todas sus subsecuencias finitas y contiguas de cualquier longitud presentan una distribución uniforme. En un artículo de 1963, Joel Franklin presenta esto como un primer requerimiento de pseudoaleatoriedad para secuencias determinísticas, y prueba que la equidistribución completa implica muchas otras propiedades importantes de las secuencias aleatorias. Este concepto está relacionado adicionalmente con el de normalidad, dado que se dice que un número es normal en una determinada base si su representación en dicha base es una secuencia completamente equidistribuida. El trabajo de Knuth se basa en secuencias de De Bruijn, las cuales muestran también una relación cercana con la noción de equidistribución, y pueden ser generadas por el algoritmo FKM en tiempo constante amortizado. Presentamos una variante de su secuencia mediante una construcción similar (aunque más sencilla) y probamos que la secuencia generada también es completamente equidistribuida.
 
 \bigskip
 
-\noindent\textbf{Palabras claves:} Guerra, Rebelión, Wookie, Jedi, Fuerza, Imperio (no menos de 5).
+\noindent\textbf{Palabras claves:} secuencia aleatoria, equidistribución completa, secuencia de De Bruijn, algoritmo FKM, secuencia de Ford, secuencia de Knuth.
